# dlog-arithmetic

./: .travis.yml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: functions.rs  groups.rs  interpreter.rs  lib.rs  parser.rs  type_inference.rs
src/parser/: tests.rs
tests/: eval.rs
