[package]
name = "eccalc"
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2018"

[dependencies]
curve25519 = { package = "curve25519-dalek", version = "1.0" }
failure = "0.1.5"
failure_derive = "0.1.5"
hex = "0.3.2"
nom = "5.0.0"
sha2 = "0.8.0"
rand_core = "0.4.0"

[dependencies.nom_locate]
git = "https://github.com/fflorent/nom_locate"
rev = "f02f7081cb9c5abfe8b38a1d22d30c6892262fa1"

[dev-dependencies]
assert_matches = "1.3.0"
ed25519 = { package = "ed25519-dalek", version = "1.0.0-pre.1" }
rand = "0.6.5"

[workspace]
members = [".", "cli"]
